improve entrypoint error title pages

--- a/docs/wallet/atelier-intro.mdx
+++ b/docs/wallet/atelier-intro.mdx
@@ -1,5 +1,5 @@
 ---
-title: Intro to Candide
+title: Introduction to Candide Account Abstraction
 description: A powerful toolkit to create, customize, and offer Smart Wallets. Explore ERC-4337 support, account abstraction, paymaster integration, bundler features, and seamless management of Smart Wallets
 image: /img/posters/atelier-meta.png
 keywords: [erc-4337, account abstraction, paymaster, bundler, Smart Wallets]
