--- a/docs/wallet/technical-reference/2.entrypoint-error-codes.md
+++ b/docs/wallet/technical-reference/2.entrypoint-error-codes.md
@@ -1,5 +1,5 @@
 ---
-title: Index
+title: List of Account Abtraction Entrypoint Error Codes
 description: In case of failure, the entrypoint return an error result object, with code and message
 keywords: [deployments, addresses, etherscan, verifed]
 ---
