--- a/docs/wallet/technical-reference/3.bundler-error-codes.md
+++ b/docs/wallet/technical-reference/3.bundler-error-codes.md
@@ -1,5 +1,5 @@
 ---
-title: Index
+title: List of Account Abstraction Bundler Error Codes
 description: In case of failure, the bundler return an error result object, with code and message.
 keywords: [deployments, addresses, etherscan, verifed]
 ---
