--- a/docs/wallet/technical-reference/chain-nuances.mdx
+++ b/docs/wallet/technical-reference/chain-nuances.mdx
@@ -1,8 +1,10 @@
 ---
-title: EVM Chain Nuances 
+title: How to add overrides for gas prices and estimates for different EVM chains  
 description: This guide explores how to interact with different EVM chains with Account Abstraction, focusing on the nuances and technical differences that a developer should be aware of
 keywords: [EVM, polygon, gas-estimates, account-abstraction]
 ---
+
+# EVM Chain Nuances
 
 ## Gas prices
 
