add world support

--- a/docs/wallet/paymaster/1-tokens-supported.mdx
+++ b/docs/wallet/paymaster/1-tokens-supported.mdx
@@ -15,6 +15,7 @@ import {
     ethereumList,
     gnosisList,
     optimismList,
+    worldchainList,
     arbitrumSepoliaList,
     amoyList,
     alfajoresList,
@@ -54,6 +55,9 @@ If you would like to see a token or network supported, reach out on Discord or e
 
 ### Polygon POS
 <PaymasterSupportedToken items={polygonList} />
+
+### Worldchain Mainnet
+<PaymasterSupportedToken items={worldchainList}/>
 
 ## Testnets
 
