update instagas wording

--- a/docs/instagas/1-overview.mdx
+++ b/docs/instagas/1-overview.mdx
@@ -11,15 +11,15 @@ image: /img/posters/paymaster-meta.png
 [Signup](https://app.formbricks.com/s/cm7pxlxbn0000l503icy2yfeb) for early access when official invites go live and help shape the future of Ethereum's UX
 :::
 
-InstaGas is a **no-code** platform that enables Dapps to sponsor gas fees for their end-users by 
+InstaGas is a **no-code** platform that to sponsor gas fees for end-users by 
 creating customized gas policies tailored to their specific smart contracts and use cases.
 
 ![candide-instagas-logo](/img/logo/instagas-logo.png)
 
 ## Who is this for?
 
-InstaGas is designed for Dapps that want to simplify the user experience by abstracting away gas costs, **without the need for a complex wallet integration**. 
-InstaGas is ideal for a variety of dApps, including:
+InstaGas is designed for Apps that want to simplify the user experience by abstracting away gas costs, **without the need for a complex wallet integration**. 
+InstaGas is ideal for a variety of Apps, including:
 
 * DeFi exchanges
 * Lending protocols
@@ -44,7 +44,7 @@ Once your policy is active:
 
 ## Rules Overview
 
-InstaGas provides a set of rules to customize gas policies for dApps. These rules are categorized into four main sections: 
+InstaGas provides a set of rules to customize gas policies for Apps. These rules are categorized into four main sections: 
 1. General Rules
 2. Account Rules
 3. Access Rules
