--- a/docs/wallet/atelier-intro.mdx
+++ b/docs/wallet/atelier-intro.mdx
@@ -11,12 +11,12 @@ Candide is the most complete smart account toolset with support for both ERC-433
 
 ## UX Benefits
 
-- **Authentication made easy** 
-  - [Passkeys Login](/wallet/plugins/passkeys/)
-  - [Email/Social Login](/wallet/guides/authentication/#social--email)
 - **Gas Abstraction**
   - [Sponsor gas](/wallet/guides/send-gasless-tx/) with rules and policies
   - Offer [gas payments in erc-20](/wallet/guides/pay-gas-in-erc20/) tokens
+- **Authentication made easy** 
+  - [Passkeys Login](/wallet/plugins/passkeys/)
+  - [Email/Social Login](/wallet/guides/authentication/#social--email)
 - **Programmable Transactions**
   - Use [Spending Limits](/wallet/plugins/allowance) to offer subscriptions and reccuring/scheduled payments.
   - [Batch multiple transactions](/wallet/guides/getting-started/#step-4-create-useroperation) into one.
@@ -29,7 +29,7 @@ And that's only the tip of the iceberg. Because each account is a smart contract
 ## Products
 
 - **AbstractionKit SDK**: A Typescript library to build and send UserOperations, with first class support for *Safe* Accounts and *Simple* Accounts.
-- **InstaGas**: A no-code platform that enables Dapps to sponsor gas fees for their end-users using rules and policies
+- **InstaGas**: A no-code platform to sponsor gas fees for end-users using rules and policies
 - **API**
   - **Bundler**: Nodes extension on all EVM compatible chains to send smart wallet type transactions
   - **Paymaster**: Off-chain verification API facilitating gas sponsorship for gasless and gas payments in erc-20 token
