fix guides example repo name

--- a/docs/wallet/guides/0-getting-started.mdx
+++ b/docs/wallet/guides/0-getting-started.mdx
@@ -25,8 +25,8 @@ Candide builds open-source software for ERC-4337 account abstraction standard. T
 1. Create a new directory for your project:
 
 ```bash
-mkdir candide-eip7702-upgrade-eoa
-cd candide-eip7702-upgrade-eoa
+mkdir candide-smart-account
+cd candide-smart-account
 npx tsc --init
 ```
 
