--- a/docs/wallet/guides/1-send-gasless-tx.mdx
+++ b/docs/wallet/guides/1-send-gasless-tx.mdx
@@ -31,8 +31,8 @@ If you need, you can fork and run this tutorial directly on [Github](https://git
 1. Create a new directory for your project:
 
 ```bash
-mkdir candide-eip7702-upgrade-eoa
-cd candide-eip7702-upgrade-eoa
+mkdir candide-gasless
+cd candide-gasless
 npx tsc --init
 ```
 
