--- a/docs/wallet/guides/2-pay-gas-in-erc20.mdx
+++ b/docs/wallet/guides/2-pay-gas-in-erc20.mdx
@@ -33,8 +33,8 @@ If you are coming from the [previous guide](../send-gasless-tx), you only need a
 1. Create a new directory for your project:
 
 ```bash
-mkdir candide-eip7702-upgrade-eoa
-cd candide-eip7702-upgrade-eoa
+mkdir candide-pay-gas-erc20
+cd candide-pay-gas-erc20
 npx tsc --init
 ```
 
