--- a/docs/wallet/guides/3-multisig.mdx
+++ b/docs/wallet/guides/3-multisig.mdx
@@ -28,8 +28,8 @@ If you are coming from the [getting-started](../getting-started) guide, you only
 1. Create a new directory for your project:
 
 ```bash
-mkdir candide-eip7702-upgrade-eoa
-cd candide-eip7702-upgrade-eoa
+mkdir candide-multisig
+cd candide-multisig
 npx tsc --init
 ```
 
