--- a/docs/wallet/plugins/0-passkeys.mdx
+++ b/docs/wallet/plugins/0-passkeys.mdx
@@ -56,7 +56,7 @@ yarn add abstractionkit ox
 
 ### Step 1: Create WebAuthn credentials
 
-Create WebAuthn credentials using the `createCredential` function from `ox/WebAuthnP256`. This function simplifies the process by handling the interaction with the WebAuthn API.
+Create WebAuthn credentials using the `createCredential` function from `ox/WebAuthnP256`. This function simplifies the process by handling the interaction with the browser WebAuthn API.
 
 ```ts
 import { createCredential } from 'ox/WebAuthnP256'
