--- a/docs/wallet/technical-reference/1.deployments.mdx
+++ b/docs/wallet/technical-reference/1.deployments.mdx
@@ -60,6 +60,7 @@ Below are some that are deployed at
 | Base                         | 0x38275826E1933303E508433dD5f289315Da2541c | 0x088f6cfD8BB1dDb1BB069CCb3fc1A98927D233f2 | 0x9BacD92F4687Db306D7ded5d4513a51EA05df25b |                                            |
 | Ethereum Mainnet             | 0x38275826E1933303E508433dD5f289315Da2541c | 0x088f6cfD8BB1dDb1BB069CCb3fc1A98927D233f2 | 0x9BacD92F4687Db306D7ded5d4513a51EA05df25b |                                            |
 | Ethereum Sepolia             |                                            |                                            |                                            | 0x949d01d424bE050D09C16025dd007CB59b3A8c66 |
+| Gnosis                       | 0x38275826E1933303E508433dD5f289315Da2541c | 0x088f6cfD8BB1dDb1BB069CCb3fc1A98927D233f2 | 0x9BacD92F4687Db306D7ded5d4513a51EA05df25b |                                            |
 | Optimism                     | 0x38275826E1933303E508433dD5f289315Da2541c | 0x088f6cfD8BB1dDb1BB069CCb3fc1A98927D233f2 | 0x9BacD92F4687Db306D7ded5d4513a51EA05df25b |                                            |
 | Polygon                      | 0x38275826E1933303E508433dD5f289315Da2541c | 0x088f6cfD8BB1dDb1BB069CCb3fc1A98927D233f2 | 0x9BacD92F4687Db306D7ded5d4513a51EA05df25b |                                            |
 
