fix eip-7702 guides with typos and clarification

--- a/docs/wallet/guides/8-pay-gas-in-erc20-eip-7702.mdx
+++ b/docs/wallet/guides/8-pay-gas-in-erc20-eip-7702.mdx
@@ -1,6 +1,6 @@
 ---
 title:  How to pay gas in erc-20 tokens for EIP-7702 Accounts using abstractionkit   
-description: Learn how to upgrade an EOA to a EIP-7702 Smart Account and let users pay gas in ERC-20s using paymasters  
+description: Learn how to upgrade an EOA to an EIP-7702 Smart Account and let users pay gas in ERC-20s using paymasters  
 keywords: [eip-7702, smart-account, pay gas in erc20, EOA, gas sponsorship]
 ---
 
@@ -16,8 +16,7 @@ Offer the ability for users to pay gas in ERC-20s using any of the [supported ER
 1. Create a new app on the [dashboard](https://dashboard.candide.dev) and copy the Paymaster URL into your `.env` file.
 2. Select an ERC-20 token to pay gas with and add its address to the `.env` file. We use CTT in this example. 
 
-
-If you would like to see full example, you can reference it [here](https://github.com/candidelabs/abstractionkit-examples/blob/main/eip-7702/upgrade-eoa-to-7702-smart-account-erc-20-gas.ts).
+If you would like to see a full example, you can reference it [here](https://github.com/candidelabs/abstractionkit-examples/blob/main/eip-7702/upgrade-eoa-to-7702-smart-account-erc-20-gas.ts).
 
 <Tabs>
 <TabItem value="index.ts" label="index.ts">
@@ -52,7 +51,7 @@ if (tokenSelected) {
         userOperation,
         tokenSelected.address
     )
-    console.log("This useroperation may cost upto : " + cost + " wei in CTT token")
+    console.log("This useroperation may cost up to : " + cost + " wei in CTT token")
     console.log("Please fund the sender account: " + userOperation.sender +" with more than "+ cost + " wei CTT token")
 }
 ```
