--- a/docs/wallet/guides/7-send-galess-eip-7702.mdx
+++ b/docs/wallet/guides/7-send-galess-eip-7702.mdx
@@ -1,6 +1,6 @@
 ---
-title: How to sponsored gas for EIP-7702 Accounts using abstractionkit
-description: Learn how to upgrade an EOA to a EIP-7702 Smart Account and send a gasless transaction  
+title: How to Sponsor Gas for EIP-7702 Accounts using abstractionkit
+description: Learn how to upgrade an EOA to an EIP-7702 Smart Account and send gasless transactions  
 keywords: [eip-7702, smart-account, gasless, EOA, gas sponsorship]
 ---
 
@@ -11,8 +11,9 @@ import TabItem from "@theme/TabItem";
 
 **Smart EOAs via EIP-7702**
 
-Enable users to benefit from gasless transactions by offering publicly available gas policies set up by third parties on InstaGas
-like PoolTogether, AAVE, Unizen and many more. If no matching public gas policy is found for the user operation, you can fall back to a private gas policy of your own.
+EIP-7702 allows regular Ethereum EOAs (Externally Owned Accounts) to act as smart accounts for a transaction. This enables features like gas sponsorship, multisig, and more, without permanently converting the EOA.
+
+With EIP-7702, users can benefit from gasless transactions by leveraging publicly available gas policies set up by third parties on InstaGas—like PoolTogether, Revoke, AAVE, and many more. If no matching public gas policy is found for the user operation, you can fall back to a private gas policy of your own.
 
 Definitions:
 
@@ -24,7 +25,7 @@ Steps to Implement Gasless Transactions:
 1. Create a new app on the [dashboard](https://dashboard.candide.dev) and copy the Paymaster RPC URL into your `.env` file.
 2. Optionally, set up a Private Gas Policy on the dashboard and copy its sponsorship policy ID into your `.env` file.
 
-If you would like to see full example, you can reference it [here](https://github.com/candidelabs/abstractionkit-examples/blob/main/eip-7702/upgrade-eoa-to-7702-smart-account-sponsored-gas.ts).
+If you would like to see a full example, you can reference it [here](https://github.com/candidelabs/abstractionkit-examples/blob/main/eip-7702/upgrade-eoa-to-7702-smart-account-sponsored-gas.ts).
 
 <Tabs>
 <TabItem value="index.ts" label="index.ts">
@@ -40,10 +41,11 @@ const paymasterRPC = process.env.PAYMASTER_RPC as string;
 const paymaster: CandidePaymaster = new CandidePaymaster(paymasterRPC);
 const sponsorshipPolicyId = process.env.SPONSORSHIP_POLICY_ID;
 
+// userOperation and bundlerUrl should be defined elsewhere in your code
 let paymasterUserOperation;
 let sponsorMetadata;
 try {
-  // sponsor gas using public gas policies
+  // Sponsor gas using public gas policies
   [paymasterUserOperation, sponsorMetadata] =
     await paymaster.createSponsorPaymasterUserOperation(
       userOperation,
@@ -51,7 +53,7 @@ try {
     );
 } catch (publicGasPolicyUnavailable) {
   try {
-    // sponsor gas using a private gas policy
+    // Sponsor gas using a private gas policy
     [paymasterUserOperation, sponsorMetadata] =
       await paymaster.createSponsorPaymasterUserOperation(
         userOperation,
@@ -59,9 +61,9 @@ try {
         sponsorshipPolicyId,
       );
   } catch (privateGasPolicyUnavailable) {
-    // fallback to propose to the user the option to pay gas in erc-20 tokens
-  } catch (erc20GasPaymentUnavalable) {
-    // Last fallback to propose to the user the option to pay gas in native token
+    // Fallback: propose to the user the option to pay gas in ERC-20 tokens
+  } catch (erc20GasPaymentUnavailable) {
+    // Last fallback: propose to the user the option to pay gas in the native token
   }
 }
 
